Update App.java